# my_burn

./: .gitignore  CLAUDE.md  Cargo.toml
src/: config.rs  data.rs  dataset.rs  main.rs  model.rs  training.rs
src/data/: batcher.rs  loader.rs  mod.rs  transforms.rs
src/models/: mod.rs  registry.rs  simple_cnn.rs
