[package]
name = "my_burn"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = {version = "~0.19", features = ["std", "tui", "train", "vision", "wgpu", "fusion"], default-features = false}
image = "0.25"
serde = {version="1.0", feature = ["derive"]}
serde_yaml = "0.9"
clap = { version=4, feature=["derive"]}


